--- a/stacks/provisioned/feeder.yml
+++ b/stacks/provisioned/feeder.yml
@@ -393,8 +393,7 @@ Resources:
           PolicyName: SnsFullApplicationAccess
         - PolicyDocument:
             Statement:
-              - Effect: Allow
-                Action:
+              - Action:
                   - s3:AbortMultipartUpload
                   - s3:Get*
                   - s3:ListAllMyBuckets
@@ -405,6 +404,7 @@ Resources:
                   - s3:PutObject
                   - s3:PutObjectAcl
                   - s3:PutObjectVersionAcl
+                Effect: Allow
                 Resource: !If # TODO Better multi-region support
                   - IsProduction
                   - ["arn:aws:s3:::prx-feed/*", "arn:aws:s3:::prx-feed"]
