--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -272,7 +272,7 @@ Resources:
     Properties:
       Description: >-
         Allow ingress traffic from the Dovetail LB SG to the instance SG on
-        ports by ECS task dynamic port mapping.
+        ports used by ECS task dynamic port mapping.
       FromPort: 32768
       GroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
       IpProtocol: tcp
