--- a/stacks/provisioned/feeder.yml
+++ b/stacks/provisioned/feeder.yml
@@ -226,7 +226,7 @@ Resources:
     Properties:
       Description: >-
         Allow ingress traffic from the Feeder LB SG to the instance SG on ports
-        by ECS task dynamic port mapping.
+        used by ECS task dynamic port mapping.
       FromPort: 32768
       GroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
       IpProtocol: tcp
