--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -91,8 +91,8 @@ Resources:
     Type: AWS::EC2::SecurityGroupIngress
     Properties:
       Description: >-
-        Allow ingress traffic from the LB SG to the instance SG on ports by
-        ECS task dynamic port mapping.
+        Allow ingress traffic from the LB SG to the instance SG on ports used
+        by ECS task dynamic port mapping.
       FromPort: 32768
       GroupId: !GetAtt InstanceSecurityGroup.GroupId
       IpProtocol: tcp
