Revert temporary security group rules

--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -352,43 +352,43 @@ Resources:
         Allows web and Sphinx traffic into the Sphinx server service, and MySQL
         traffic out
       SecurityGroupEgress:
+        # - CidrIp: 0.0.0.0/0
+        #   IpProtocol: "-1"
         - CidrIp: 0.0.0.0/0
-          IpProtocol: "-1"
-        # - CidrIp: 0.0.0.0/0
-        #   FromPort: 443
-        #   IpProtocol: tcp
-        #   ToPort: 443
-        # - CidrIpv6: ::/0
-        #   FromPort: 443
-        #   IpProtocol: tcp
-        #   ToPort: 443
-        # - CidrIp: 0.0.0.0/0
-        #   FromPort: 3306
-        #   IpProtocol: tcp
-        #   ToPort: 3306
-        # - CidrIpv6: ::/0
-        #   FromPort: 3306
-        #   IpProtocol: tcp
-        #   ToPort: 3306
+          FromPort: 443
+          IpProtocol: tcp
+          ToPort: 443
+        - CidrIpv6: ::/0
+          FromPort: 443
+          IpProtocol: tcp
+          ToPort: 443
+        - CidrIp: 0.0.0.0/0
+          FromPort: 3306
+          IpProtocol: tcp
+          ToPort: 3306
+        - CidrIpv6: ::/0
+          FromPort: 3306
+          IpProtocol: tcp
+          ToPort: 3306
       SecurityGroupIngress:
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: "-1"
-        # - CidrIp: !Ref VpcCidrBlock
-        #   IpProtocol: tcp
-        #   FromPort: !Ref kWebApplicationPort
-        #   ToPort: !Ref kWebApplicationPort
-        # - CidrIpv6: !Ref VpcIpv6CidrBlocks
-        #   IpProtocol: tcp
-        #   FromPort: !Ref kWebApplicationPort
-        #   ToPort: !Ref kWebApplicationPort
-        # - CidrIp: !Ref VpcCidrBlock
-        #   IpProtocol: tcp
-        #   FromPort: !Ref kSphinxPort
-        #   ToPort: !Ref kSphinxPort
-        # - CidrIpv6: !Ref VpcIpv6CidrBlocks
-        #   IpProtocol: tcp
-        #   FromPort: !Ref kSphinxPort
-        #   ToPort: !Ref kSphinxPort
+        # - CidrIp: 0.0.0.0/0
+        #   IpProtocol: "-1"
+        - CidrIp: !Ref VpcCidrBlock
+          IpProtocol: tcp
+          FromPort: !Ref kWebApplicationPort
+          ToPort: !Ref kWebApplicationPort
+        - CidrIpv6: !Ref VpcIpv6CidrBlocks
+          IpProtocol: tcp
+          FromPort: !Ref kWebApplicationPort
+          ToPort: !Ref kWebApplicationPort
+        - CidrIp: !Ref VpcCidrBlock
+          IpProtocol: tcp
+          FromPort: !Ref kSphinxPort
+          ToPort: !Ref kSphinxPort
+        - CidrIpv6: !Ref VpcIpv6CidrBlocks
+          IpProtocol: tcp
+          FromPort: !Ref kSphinxPort
+          ToPort: !Ref kSphinxPort
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
