Add Dashboards stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1029,6 +1029,23 @@ Resources:
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/provisioned.yml
       TimeoutInMinutes: 40
 
+  DashboardsStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+      Parameters:
+        RootStackName: !GetAtt Constants.RootStackName
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/dashboards.yml
+      TimeoutInMinutes: 10
+
 Outputs:
   PipelineExecutionNonce:
     Value: !Ref PipelineExecutionNonce
