--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -580,5 +580,9 @@ Resources:
 Outputs:
   FeederVanityAlbDomain:
     Value: !GetAtt FeederStack.Outputs.VanityAlbDomain
+  FeederAlbName:
+    Value: !GetAtt FeederStack.Outputs.AlbName
   DovetailVanityAlbDomain:
     Value: !GetAtt DovetailRouterStack.Outputs.VanityAlbDomain
+  DovetailAlbName:
+    Value: !GetAtt DovetailRouterStack.Outputs.AlbName
