--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -581,3 +581,7 @@ Outputs:
       The vanity wildcard domain configured for the ALB's certificate, and
       registered in the DNS hosted zone
     Value: !GetAtt Constants.VanityAlbDomain
+  AlbName:
+    Description: >-
+      The full name of the load balancer. For example, my-load-balancer
+    Value: !GetAtt Alb.LoadBalancerName
