--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -243,6 +243,7 @@ Resources:
     Properties:
       ServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
       RootStackName: !Ref AWS::StackName
+      RootStackId: !Ref AWS::StackId
       SourceBucketName:
         Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
       SecretsBaseRegion:
@@ -1037,6 +1038,13 @@ Resources:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
         RootStackName: !GetAtt Constants.RootStackName
+        RootStackId: !GetAtt Constants.RootStackName
+        SharedEcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
+        SharedVpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        SharedEcsAsgName: !GetAtt SharedEcsAsgStack.Outputs.AsgName
+        SharedAlbName: !GetAtt SharedAlbStack.Outputs.AlbName
+        FeederAlbName: !GetAtt ProvisionedStack.Outputs.FeederAlbName
+        DovetailAlbName: !GetAtt ProvisionedStack.Outputs.DovetailAlbName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
