--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -363,3 +363,5 @@ Outputs:
       The group ID of the primary security group for EC2 instances belonging to
       the shared ASG
     Value: !GetAtt InstanceSecurityGroup.GroupId
+  AsgName:
+    Value: !Ref Asg
