Add flow logs Insights link

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1041,6 +1041,7 @@ Resources:
         RootStackId: !GetAtt Constants.RootStackName
         SharedEcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
         SharedVpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        SharedVpcFlowLogsLogGroupName: !GetAtt SharedVpcStack.Outputs.FlowLogsLogGroupName
         SharedEcsAsgName: !GetAtt SharedEcsAsgStack.Outputs.AsgName
         SharedAlbName: !GetAtt SharedAlbStack.Outputs.AlbName
         FeederAlbName: !GetAtt ProvisionedStack.Outputs.FeederAlbName
