--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -270,3 +270,6 @@ Outputs:
     Description: >-
       The ID of a security group that has KMS VPC Endpoint access.
     Value: !GetAtt InterfaceEndpointsStack.Outputs.KmsEndpointAccessSecurityGroupId
+
+  FlowLogsLogGroupName:
+    Value: !GetAtt FlowLogsStack.Outputs.LogGroupName
