--- a/stacks/shared-vpc/flow-logs.yml
+++ b/stacks/shared-vpc/flow-logs.yml
@@ -14,7 +14,6 @@ Conditions:
 Resources:
   FlowLogGroup:
     Type: AWS::Logs::LogGroup
-    Condition: IsEnabled
     Properties:
       RetentionInDays: 14
 
@@ -65,3 +64,7 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TrafficType: ALL
+
+Outputs:
+  LogGroupName:
+    Value: !Ref FlowLogGroup
