Add Elasticache links

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -586,3 +586,5 @@ Outputs:
     Value: !GetAtt DovetailRouterStack.Outputs.VanityAlbDomain
   DovetailAlbName:
     Value: !GetAtt DovetailRouterStack.Outputs.AlbName
+  CastleRedisCacheName:
+    Value: !GetAtt CastleStack.Outputs.RedisCacheName
