--- a/stacks/provisioned/castle.yml
+++ b/stacks/provisioned/castle.yml
@@ -321,3 +321,7 @@ Resources:
       Statistic: Maximum
       Threshold: 0.93
       TreatMissingData: notBreaching
+
+Outputs:
+  RedisCacheName:
+    Value: !Ref RedisReplicationGroup
