--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1046,6 +1046,8 @@ Resources:
         SharedAlbName: !GetAtt SharedAlbStack.Outputs.AlbName
         FeederAlbName: !GetAtt ProvisionedStack.Outputs.FeederAlbName
         DovetailAlbName: !GetAtt ProvisionedStack.Outputs.DovetailAlbName
+        SharedMemcachedCacheName: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheName
+        CastleRedisCacheName: !GetAtt ProvisionedStack.Outputs.CastleRedisCacheName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
