--- a/stacks/shared-memcached.yml
+++ b/stacks/shared-memcached.yml
@@ -139,6 +139,8 @@ Resources:
       TreatMissingData: notBreaching
 
 Outputs:
+  CacheName:
+    Value: !Ref SharedMemcachedCluster
   CacheEndpointAddress:
     Description: Cache endpoint hostname
     Value: !GetAtt SharedMemcachedCluster.ConfigurationEndpoint.Address
