Update name tags

--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -288,6 +288,7 @@ Resources:
           SourceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
           ToPort: 9200
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_cms_elasticsearch" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
