--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -390,6 +390,7 @@ Resources:
           FromPort: !Ref kSphinxPort
           ToPort: !Ref kSphinxPort
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_networks_sphinx" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
