--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -793,6 +793,7 @@ Resources:
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
         VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
+        RootStackName: !GetAtt Constants.RootStackName
         OpsWarnMessagesSnsTopicArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
         OpsErrorMessagesSnsTopicArn:
@@ -906,6 +907,7 @@ Resources:
         VPCSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
         VPCSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
         VPCSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+        RootStackName: !GetAtt Constants.RootStackName
         OpsWarnMessagesSnsTopicArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
         OpsErrorMessagesSnsTopicArn:
