--- a/stacks/provisioned/castle.yml
+++ b/stacks/provisioned/castle.yml
@@ -238,6 +238,7 @@ Resources:
           SourceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
           ToPort: 6379
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_castle_redis" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
