Add Elasticsearch link

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -591,3 +591,5 @@ Outputs:
     Value: !GetAtt DovetailRouterStack.Outputs.AlbName
   CastleRedisCacheName:
     Value: !GetAtt CastleStack.Outputs.RedisCacheName
+  CmsElasticsearchDomainName:
+    Value: !GetAtt CmsStack.Outputs.ElasticsearchDomainName
