--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -426,3 +426,7 @@ Resources:
   #     Dimensions:
   #       - Name: QueueName
   #         Value: !Ref ImageSqsCallbackName
+
+Outputs:
+  ElasticsearchDomainName:
+    Value: !Ref ElasticsearchDomain
