--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1051,6 +1051,7 @@ Resources:
         SharedMemcachedCacheName: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheName
         CastleRedisCacheName: !GetAtt ProvisionedStack.Outputs.CastleRedisCacheName
         ProvisionedStackName: !GetAtt ProvisionedStack.Outputs.StackName
+        CmsElasticsearchDomainName: !GetAtt ProvisionedStack.Outputs.CmsElasticsearchDomainName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -1085,7 +1086,7 @@ Outputs:
     Description: The resource ID for the shared VPC
     Value: !GetAtt SharedVpcStack.Outputs.VpcId
 
-  FeederVanityAlbDomain:
-    Value: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
-  DovetailVanityAlbDomain:
-    Value: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
+  # FeederVanityAlbDomain:
+  #   Value: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
+  # DovetailVanityAlbDomain:
+  #   Value: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
