--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -23,6 +23,7 @@ Parameters:
   SharedAlbVanityDomain: { Type: String }
   FeederVanityAlbDomain: { Type: String }
   DovetailVanityAlbDomain: { Type: String }
+  InfrastructureGitCommit: { Type: String }
 
 # Conditions:
 #   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -51,7 +52,7 @@ Resources:
                     "width": 14,
                     "height": 4,
                     "properties": {
-                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **${RootStackName}**\n- Shared VPC ID: **${SharedVpcId}**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **${FeederVanityAlbDomain}**\n- Dovetail ALB: **${DovetailVanityAlbDomain}**\n"
+                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **${RootStackName}**\n- Infrastructure repository Git commit: **${InfrastructureGitCommit}**\n- Shared VPC ID: **${SharedVpcId}**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **${FeederVanityAlbDomain}**\n- Dovetail ALB: **${DovetailVanityAlbDomain}**\n"
                     }
                 }
             ]
