--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1057,6 +1057,7 @@ Resources:
         SharedAlbVanityDomain: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
         FeederVanityAlbDomain: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
         DovetailVanityAlbDomain: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
+        InfrastructureGitCommit: !Ref InfrastructureGitCommit
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
