--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -54,6 +54,25 @@ Resources:
                     "properties": {
                         "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **${RootStackName}**\n- Infrastructure repository Git commit: **${InfrastructureGitCommit}**\n- Shared VPC ID: **${SharedVpcId}**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **${FeederVanityAlbDomain}**\n- Dovetail ALB: **${DovetailVanityAlbDomain}**\n"
                     }
+                },
+                {
+                    "type": "metric",
+                    "x": 6,
+                    "y": 6,
+                    "width": 6,
+                    "height": 6,
+                    "properties": {
+                        "metrics": [
+                            [ "AWS/AutoScaling", "GroupDesiredCapacity", "AutoScalingGroupName", "${SharedEcsAsgName}", { "label": "Desired Capacity" } ],
+                            [ ".", "GroupInServiceInstances", ".", ".", { "label": "In Service Instances" } ]
+                        ],
+                        "view": "timeSeries",
+                        "stacked": false,
+                        "region": "${AWS::Region}",
+                        "stat": "Average",
+                        "period": 300,
+                        "title": "Shared ASG"
+                    }
                 }
             ]
         }
