--- a/devops/aws-management/organization-trail.yml
+++ b/devops/aws-management/organization-trail.yml
@@ -1,39 +1,8 @@
-# etc/root-account-activity-monitor.yml
-# Sample CloudWatch Events event (from CloudTrail)
-# {
-#    "version": "0",
-#    "id": "a76750eb-b69f-ae47-b183-4d3cb0700618",
-#    "detail-type": "AWS API Call via CloudTrail",
-#    "source": "aws.s3",
-#    "account": "048723829744",
-#    "time": "2018-05-22T12:44:24Z",
-#    "region": "us-east-1",
-#    "resources": [],
-#    "detail": {
-#       "eventVersion": "1.05",
-#       "userIdentity": {},
-#       "eventTime": "2018-05-22T12:44:24Z",
-#       "eventSource": "s3.amazonaws.com",
-#       "eventName": "DeleteBucket",
-#       "awsRegion": "us-east-1",
-#       "sourceIPAddress": "209.6.231.175",
-#       "userAgent": "[S3Console/0.4, aws-internal/3]",
-#       "requestParameters": {},
-#       "responseElements": null,
-#       "additionalEventData": {
-#          "vpcEndpointId": "vpce-6d72a204"
-#       },
-#       "requestID": "51A7870C114C931C",
-#       "eventID": "d687e2af-5a29-4acb-bc41-6892b36420bf",
-#       "eventType": "AwsApiCall",
-#       "vpcEndpointId": "vpce-6d72a204"
-#    }
-# }
+# devops/aws-management/organization-trail.yml
 
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: >-
-  Creates a CloudTrail Organization trail
+Description: Creates a CloudTrail Organization trail
 
 Parameters:
   OrganizationId:
