--- a/devops/aws-management/devops-cloudtrail-monitor.yml
+++ b/devops/aws-management/devops-cloudtrail-monitor.yml
@@ -118,7 +118,7 @@ Resources:
       State: ENABLED
       Targets:
         - Arn: !GetAtt MonitorFunction.Arn
-          Id: !Sub ${AWS::StackName}.CloudTrailMonitor
+          Id: CloudTrailMonitor.RootActivity
 
   # MonitorFunction:
   #   Type: AWS::Serverless::Function
