--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -55,22 +55,18 @@ Resources:
     Properties:
       AssumeRolePolicyDocument:
         Statement:
-          - Action:
-              - sts:AssumeRole
+          - Action: sts:AssumeRole
             Effect: Allow
             Principal:
-              Service:
-                - codepipeline.amazonaws.com
+              Service: codepipeline.amazonaws.com
         Version: "2012-10-17"
       Policies:
         # CodePipeline seems to need access to special buckets
         - PolicyDocument:
             Statement:
-              - Action:
-                  - s3:PutObject
+              - Action: s3:PutObject
                 Effect: Allow
-                Resource:
-                  - arn:aws:s3:::codepipeline*
+                Resource: arn:aws:s3:::codepipeline*
             Version: "2012-10-17"
           PolicyName: GenericCodePipelineS3PutPolicy
         # Let CodePipeline read and write artifacts
@@ -89,14 +85,12 @@ Resources:
         # To allow the pipeline to use a CodeStar Connection
         - PolicyDocument:
             Statement:
-              - Action:
-                  - codestar-connections:*
+              - Action: codestar-connections:*
                 Condition:
                   "ForAllValues:StringEquals":
                     "codestar-connections:PassedToService": codepipeline.amazonaws.com
                 Effect: Allow
-                Resource:
-                  - !Ref CodeStarConnectionArn
+                Resource: !Ref CodeStarConnectionArn
             Version: "2012-10-17"
           PolicyName: CodeStarConnectionPolicy
         # Let CodePipeline describe CloudFormation stacks
@@ -105,8 +99,7 @@ Resources:
             Version: "2012-10-17"
             Statement:
               - Effect: Allow
-                Action:
-                  - cloudformation:*
+                Action: cloudformation:*
                 Resource:
                   - "*" # TODO
                   # - arn:aws:cloudformation:*::type/resource/AWS-IAM-ManagedPolicy
@@ -117,14 +110,14 @@ Resources:
         # Allow PassRole to the CloudFormation role
         - PolicyDocument:
             Statement:
-              - Action:
-                  - iam:PassRole
+              - Action: iam:PassRole
                 Effect: Allow
                 Resource:
                   - !GetAtt DevopsCrossAccountAccessRoleStackCloudFormationRole.Arn
                   - !GetAtt CloudWatchDataSharingRoleStackCloudFormationRole.Arn
                   - !GetAtt CloudWatchSharingListAccountsRoleStackCloudFormationRole.Arn
                   - !GetAtt OrganizationDataSharingRoleStackCloudFormationRole.Arn
+                  - !GetAtt OrganizationCloudTrailStackCloudFormationRole.Arn
             Version: "2012-10-17"
           PolicyName: IamPassRole
         # Allows the pipeline to invoke custom actions
@@ -132,15 +125,12 @@ Resources:
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              - Action:
-                  - lambda:ListFunctions
+              - Action: lambda:ListFunctions
                 Effect: Allow
                 Resource: "*"
-              - Action:
-                  - lambda:InvokeFunction
+              - Action: lambda:InvokeFunction
                 Effect: Allow
-                Resource:
-                  - !GetAtt DeploymentNotificationFunction.Arn
+                Resource: !GetAtt DeploymentNotificationFunction.Arn
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -336,31 +326,53 @@ Resources:
               InputArtifacts:
                 - Name: InfrastructureRepoSourceArtifact
               RunOrder: 1
-            # Root account activity monitor
-            # - Name: RootAccountActivityMonitorStackSet
-            #   ActionTypeId:
-            #     Category: Deploy
-            #     Owner: AWS
-            #     Provider: CloudFormationStackSet
-            #     Version: "1"
-            #   Configuration:
-            #     StackSetName: org-root-account-activity-monitor
-            #     Capabilities: CAPABILITY_IAM
-            #     Description: >-
-            #       Launches a root account activity monitor in one region in each account
-            #       in an AWS Organization. An activity monitor can monitor activity in all
-            #       regions in the account it belongs to.
-            #     TemplatePath: InfrastructureRepoSourceArtifact::etc/root-account-activity-monitor.yml
-            #     Parameters: !Sub ParameterKey=SlackMessageRelayTopicArn,ParameterValue=${SlackMessageRelayTopicArn}
-            #     PermissionModel: SERVICE_MANAGED
-            #     OrganizationsAutoDeployment: EnabledWithStackRetention
-            #     # DeploymentTargets:
-            #     Regions: !Ref Region
-            #     FailureTolerancePercentage: 0
-            #     MaxConcurrentPercentage: 100
-            #   InputArtifacts:
-            #     - Name: InfrastructureRepoSourceArtifact
-            #   RunOrder: 1
+            # Organization CloudTrail
+            - Name: OrganizationCloudTrailStack
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: "1"
+              Configuration:
+                ActionMode: CREATE_UPDATE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                ChangeSetName: !Sub ${AWS::StackName}OrganizationCloudTrailStack
+                ParameterOverrides: !Sub |
+                  {
+                    "OrganizationId": "${OrganizationId}"
+                  }
+                RoleArn: !GetAtt OrganizationCloudTrailStackCloudFormationRole.Arn
+                StackName: organization-trail
+                TemplatePath: InfrastructureRepoSourceArtifact::devops/aws-management/organization-trail.yml
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+              RunOrder: 1
+            # CloudTrail monitor stack set
+            - Name: CloudTrailStackSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormationStackSet
+                Version: "1"
+              Configuration:
+                StackSetName: org-cloudtrail-monitor
+                Capabilities: CAPABILITY_NAMED_IAM
+                Description: >-
+                  Launches a stack in each region in each account in an AWS Organization
+                  to create a Lambda function that can monitor CloudTrails for various
+                  types of activity.
+                TemplatePath: InfrastructureRepoSourceArtifact::devops/aws-management/devops-cloudtrail-monitor.yml
+                Parameters: ParameterKey=SlackMessageRelayTopicArn,ParameterValue=tktk
+                PermissionModel: SERVICE_MANAGED
+                OrganizationsAutoDeployment: EnabledWithStackRetention
+                DeploymentTargets: !Ref OrganizationRootId
+                # Excludes: af-south-1, eu-south-1, me-south-1, ap-east-1
+                Regions: us-east-1,us-east-2,us-west-1,us-west-2,ap-south-1,ap-northeast-3,ap-northeast-2,ap-southeast-1,ap-southeast-2,ap-northeast-1,ca-central-1,eu-central-1,eu-west-1,eu-west-2,eu-west-3,eu-north-1,sa-east-1
+                FailureTolerancePercentage: 95
+                MaxConcurrentPercentage: 100
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+              RunOrder: 1
         - Name: Notify
           Actions:
             - Name: DeploymentNotification
@@ -541,6 +553,49 @@ Resources:
                   - iam:UpdateRole
                   - iam:UpdateRoleDescription
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  OrganizationCloudTrailStackCloudFormationRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+          - Action: sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service: cloudformation.amazonaws.com
+        Version: "2012-10-17"
+      Policies:
+        - PolicyName: ResourceManipulationPolicy
+          PolicyDocument:
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:CreatBucket
+                  - s3:Get*
+                  - s3:List*
+                  - s3:PutBucketPolicy
+                  - s3:PutLifecycleConfiguration
+                  - s3:PutObjectTagging
+                Resource: "*"
+              - Action: cloudtrail:*
+                Effect: Allow
+                Resource: "*"
+              - Action: logs:*
+                Effect: Allow
+                Resource: "*"
+              - Action: lambda:*
+                Effect: Allow
+                Resource: "*"
+              - Action: cloudformation:*
+                Effect: Allow
+                Resource: !Sub arn:aws:cloudformation:${AWS::Region}:aws:transform/Serverless-2016-10-31
+            Version: "2012-10-17"
       Tags:
         - Key: Project
           Value: Infrastructure
