Add Lambda permission for event rule

--- a/devops/aws-management/devops-cloudtrail-monitor.yml
+++ b/devops/aws-management/devops-cloudtrail-monitor.yml
@@ -128,3 +128,10 @@ Resources:
       Targets:
         - Arn: !GetAtt MonitorFunction.Arn
           Id: CloudTrailMonitor.RootActivity
+  RootActivityEventRuleLambdaPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref MonitorFunction
+      Principal: events.amazonaws.com
+      SourceArn: !GetAtt RootActivityEventRule.Arn
