--- a/devops/aws-management/devops-cloudtrail-monitor.yml
+++ b/devops/aws-management/devops-cloudtrail-monitor.yml
@@ -1,4 +1,4 @@
-# etc/root-account-activity-monitor.yml
+# devops/aws-management/devops-cloudtrail-monitor.yml
 # Sample CloudWatch Events event (from CloudTrail)
 # {
 #    "version": "0",
@@ -32,7 +32,9 @@
 
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
-  tktktk
+  Creates EventBridge rules that watch CloudTrail for specific types of
+  activity, which trigger a Lambda function (used for generating notifications,
+  etc). This stack is intended to be launched in all regions and all accounts.
 
 Parameters:
   SlackMessageRelayTopicArn:
