Add basic empty resource share

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -896,6 +896,24 @@ Resources:
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-ecs-asg.yml
       TimeoutInMinutes: 20
 
+  SharedResourceShareStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
+    Properties:
+      NotificationARNs:
+        - !GetAtt Constants.CloudFormationNotificationArn
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        RootStackName: !GetAtt Constants.RootStackName
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-resource-share.yml
+      TimeoutInMinutes: 20
+
   PrivateSharedMemcachedStack:
     Type: AWS::CloudFormation::Stack
     Condition: IsStaging # TODO
