--- a/stacks/shared-resource-share.yml
+++ b/stacks/shared-resource-share.yml
@@ -7,6 +7,9 @@ Description: >-
 Parameters:
   EnvironmentType: { Type: String }
   RootStackName: { Type: String }
+  VPCPrivateSubnet1: { Type: "AWS::EC2::Subnet::Id" }
+  VPCPrivateSubnet2: { Type: "AWS::EC2::Subnet::Id" }
+  VPCPrivateSubnet3: { Type: "AWS::EC2::Subnet::Id" }
 
 # Conditions:
 #   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -19,8 +22,10 @@ Resources:
       Name: !Sub ${RootStackName}_shared
       # Principals:
       #   - String
-      # ResourceArns:
-      #   - String
+      ResourceArns:
+        - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${VPCPrivateSubnet1}
+        - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${VPCPrivateSubnet2}
+        - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${VPCPrivateSubnet3}
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
