--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -905,6 +905,9 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !GetAtt Constants.RootStackName
+        VPCPrivateSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+        VPCPrivateSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+        VPCPrivateSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
