Add resource share principal root parameter

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -130,6 +130,8 @@ Parameters:
     Type: String
   BacksawArchiveS3ObjectVersion:
     Type: String
+  SharedResourceSharePrincipals:
+    Type: CommaDelimitedList
   # Parameter Overrides from the CodePipeline action
   InfrastructureStorageStackName:
     Type: String
@@ -905,6 +907,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !GetAtt Constants.RootStackName
+        SharedResourceSharePrincipals: !Ref SharedResourceSharePrincipals
         VPCPrivateSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
         VPCPrivateSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
         VPCPrivateSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
