--- a/stacks/shared-resource-share.yml
+++ b/stacks/shared-resource-share.yml
@@ -7,6 +7,7 @@ Description: >-
 Parameters:
   EnvironmentType: { Type: String }
   RootStackName: { Type: String }
+  SharedResourceSharePrincipals: { Type: CommaDelimitedList }
   VPCPrivateSubnet1: { Type: "AWS::EC2::Subnet::Id" }
   VPCPrivateSubnet2: { Type: "AWS::EC2::Subnet::Id" }
   VPCPrivateSubnet3: { Type: "AWS::EC2::Subnet::Id" }
@@ -20,8 +21,7 @@ Resources:
     Properties:
       AllowExternalPrincipals: false
       Name: !Sub ${RootStackName}_shared
-      # Principals:
-      #   - String
+      Principals: !Split [",", !Ref SharedResourceSharePrincipals]
       ResourceArns:
         - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${VPCPrivateSubnet1}
         - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${VPCPrivateSubnet2}
